--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,9 @@
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/orm": "^2.5",
         "dompdf/dompdf": "^0.8.2",
+        "h4cc/wkhtmltopdf-amd64": "^0.12.4",
         "incenteev/composer-parameter-handler": "^2.0",
+        "knplabs/knp-snappy-bundle": "^1.4",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
         "symfony/asset": "^3.4",
