mise à jour - pdf mise en page ok
infos client à récupérer

--- a/src/BlBundle/Resources/config/routing.yml
+++ b/src/BlBundle/Resources/config/routing.yml
@@ -85,6 +85,10 @@ factures:
     path:     /factures
     defaults: { _controller: BlBundle:Vues:factures }
 
+facture:
+    path:     /facture
+    defaults: { _controller: BlBundle:Vues:facture }
+
 listearticles:
     path:     /listearticles
     defaults: { _controller: BlBundle:Vues:listearticles }
