--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -70,3 +70,13 @@ swiftmailer:
     username: '%mailer_user%'
     password: '%mailer_password%'
     spool: { type: memory }
+
+knp_snappy:
+    pdf:
+        enabled:    true
+        binary:     /Applications/MAMP/htdocs/symphony/LFB-BLProject/vendor/h4cc/wkhtmltopdf-amd64/bin/wkhtmltopdf-amd64 #"\"C:\\Program Files\\wkhtmltopdf\\bin\\wkhtmltopdf.exe\"" for Windows users
+        options:    []
+    image:
+        enabled:    true
+        binary:     /usr/local/bin/wkhtmltoimage #"\"C:\\Program Files\\wkhtmltopdf\\bin\\wkhtmltoimage.exe\"" for Windows users
+        options:    []
