--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,6 @@
         "dompdf/dompdf": "^0.8.2",
         "h4cc/wkhtmltopdf-amd64": "^0.12.4",
         "incenteev/composer-parameter-handler": "^2.0",
-        "knplabs/knp-snappy-bundle": "^1.4",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
         "symfony/asset": "^3.4",
@@ -37,7 +36,9 @@
         "symfony/swiftmailer-bundle": "^2.3.10",
         "symfony/symfony": "3.3.*",
         "twbs/bootstrap": "^4.0",
-        "twig/twig": "^1.0||^2.0"
+        "twig/twig": "^1.0||^2.0",
+        "knplabs/knp-snappy-bundle": "dev-master"
+
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
